results/SVCOMP/specgen/log-assert5-2024_02_24_04_56_36.txt
import java.util.Random;

class assert5 {
    //@ ensures \nothing;
    public static void func() {
        int i = new Random().nextInt();

        if (i > 1000) assert i > 1000 : "i is greater 1000"; // should hold
    }
}
/home/max/Documents/JMLGPT/tmp/assert5.java:4: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
1 error

import java.util.Random;

class assert5 {
    //@ ensures true;
    public static void func() {
        int i = new Random().nextInt();

        if (i > 1000) assert i > 1000 : "i is greater 1000"; // should hold
    }
}

